--- a/wp-content/themes/interactiveposts/src/styles/frontend.scss
+++ b/wp-content/themes/interactiveposts/src/styles/frontend.scss
@@ -1,6 +1,12 @@
 @use 'fullpage.js/dist/fullpage';
 @use '@glidejs/glide/src/assets/sass/glide.core';
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
   --dashed-border: 2px dashed rgba(255, 255, 255, 0.25);
 }
@@ -8,9 +14,13 @@
 body {
   color: #ffffff;
   font-family: 'Ubuntu', sans-serif;
-  padding: 2rem;
+  padding: 1rem;
   background-repeat: repeat;
   background-image: url('../images/background.svg');
+
+  @media screen and (min-width: 960px) {
+    padding: 2rem;
+  }
 }
 
 a {
@@ -29,6 +39,13 @@ body > header > section {
   padding: 1rem;
 }
 
+main,
+main > section {
+  @media screen and (min-width: 960px) {
+    min-height: 100vh !important;
+  }
+}
+
 main {
   position: relative;
   z-index: 1;
@@ -45,19 +62,25 @@ main > section {
 }
 
 main > section > div {
-  margin-top: 6rem;
-  padding: 0 1rem;
   width: 100%;
   max-width: 1280px;
   display: block;
   align-self: center;
+}
 
-  @media screen and (min-width: 768px) {
-    margin-top: 4rem;
+main > section > div > h2 {
+  font-size: 2rem;
+  font-weight: 400;
+  padding: 1rem 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+
+  @media screen and (min-width: 960px) {
+    display: none;
   }
 }
 
- main > section[data-anchor="screenshots"] > div {
+main > section[data-anchor="screenshots"] > div {
+  width: 100%;
   max-width: 100%;
 }
 
@@ -69,19 +92,23 @@ main > section > article {
 }
 
 ippm-banner {
-  display: grid;
-  gap: 0.5rem;
-  align-items: center;
-  grid-template-columns: auto auto 1fr;
+  display: none;
   opacity: 0;
   pointer-events: none;
   transition: opacity 300ms ease;
+
+  @media screen and (min-width: 960px) {
+    display: grid;
+    gap: 0.5rem;
+    align-items: center;
+    grid-template-columns: auto auto 1fr;
+  }
 
   h1 {
     font-size: 2rem;
     margin: 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 960px) {
       font-size: 2.5rem;
     }
   }
@@ -100,15 +127,22 @@ body:not([data-current-anchor="intro"]) ippm-banner {
 
 ippm-intro {
   display: grid;
-  gap: 2rem;
   align-items: center;
-  grid-template-columns: auto 1fr;
   width: 100%;
-  max-width: 960px;
   margin: auto;
+  padding: 0 1rem;
+  box-sizing: border-box;
+
+  @media screen and (min-width: 960px) {
+    gap: 2rem;
+    grid-template-columns: auto 1fr;
+    padding: 0;
+    max-width: 960px;
+  }
 
   h2 {
-    font-size: 3.5rem;
+    // font-size: 3.5rem;
+    font-size: clamp(2.5rem, 2.5vw, 3.5rem);
     margin: 0;
     animation: slideLeft ease-in-out 0.5s;
   }
@@ -148,7 +182,7 @@ ippm-demo-cards {
   padding: 1rem;
   border: var(--dashed-border);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 960px) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
@@ -192,8 +226,13 @@ ippm-gallery-container {
 }
 
 ippm-screenshots {
+  --max-height: 500px;
+
   display: block;
-  margin-top: -8rem;
+
+  @media screen and (min-width: 960px) {
+    margin-top: -8rem;
+  }
 
   ippm-screenshots-bullets {
     display: flex;
@@ -237,9 +276,10 @@ ippm-screenshots {
   }
 
   .glide__slide--active {
-    transform: scale(1.5);
-    border-left: 18px solid #5c0029;
-    border-right: 18px solid #5c0029;
+    @media screen and (min-width: 960px) {
+      transform: scale(1.5);
+      box-shadow: 8px 8px 0 #5c0029, -8px -8px 0 #5c0029;
+    }
   }
 }
 
@@ -262,6 +302,35 @@ ippm-modal {
   img {
     cursor: pointer;
     max-width: 100%;
+  }
+}
+
+ippm-faqs {
+  display: grid;
+  gap: 1rem;
+  max-height: 80vh;
+  overflow: auto;
+  padding: 1rem;
+  max-width: 1280px;
+  margin: auto;
+  border: var(--dashed-border);
+
+  @media screen and (min-width: 960px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  p {
+    line-height: 1.5;
+  }
+
+  details {
+    color: #2e3329;
+    padding: 1rem;
+    background: white;
+  }
+
+  summary {
+    cursor: pointer;
   }
 }
 
